--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="id_number">ID Number</string>
+    <string name="id_number">ID Number optional</string>
+    <string name="demoUserName">Gopal Meena</string>
+    <string name="demoAc">A/C - 55456147</string>
+    <string name="q"><![CDATA[<]]></string>
 </resources>
