--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="login_mobile_hint">Enter Mobile Number</string>
     <string name="accept_privacy_policy">accept privacy policy</string>
     <string name="let_s_begin_enter_your_number">Let\'s Begin - Enter Your Number</string>
-    <string name="a_single_step_to_go">One More Step To Finish</string>
+    <string name="a_single_step_to_go">ENTER OTP HERE</string>
     <string name="force_exit">Force Exit</string>
     <string name="continue_here">CONTINUE</string>
     <string name="account_succesfully_created">Account Created Successfully</string>
@@ -15,7 +15,7 @@
     <string name="top_currencies">Top Currencies</string>
     <string name="see_all">SEE ALL</string>
     <string name="recent_views">Recent Views</string>
-    <string name="begin_trading_line">Choose your perfect coin with India\'s best crypto trading app and start earning with zero fees</string>
+    <string name="begin_trading_line">Send Money Instantly From Your Credit Card &amp; Wallets To Your Bank Account With Lowest Fees</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_setting">setting_activity</string>
@@ -31,4 +31,7 @@
     <string name="demoUserName">Gopal Meena</string>
     <string name="demoAc">A/C - 55456147</string>
     <string name="q"><![CDATA[<]]></string>
+    <string name="paymentComplete">To complete the payment\nplease click on the procced button</string>
+    <string name="read_more">READ MORE</string>
+    <string name="last_four_transaction">LAST FOUR TRANSACTION</string>
 </resources>
