--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="alert">Alert!</string>
     <string name="hello_world_how_are_you_today">hello world how are you today?</string>
     <string name="okay">okay</string>
+    <string name="pay_your_rent_with_credit_card">Pay Your Rent With Credit Card</string>
 </resources>
