cc layout added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="pendinfg_bank">Pending! Your Bank Account is not Verified yet. we will inform you once get verified</string>
     <string name="enter_amount">₹0</string>
     <string name="services">Cashix Services</string>
-    <string name="recycler_top">Cashix Updates</string>
+    <string name="recycler_top">Credit Cards</string>
     <string name="last_transactions">Last Transactions</string>
     <string name="paying_to_account">Paying To Account</string>
     <string name="bank_heading">Credit Card To Bank</string>
