--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="hi_there">Hi there,</string>
     <string name="how_much_amount_do_you_want_to_transfer">how much amount do you want to transfer?</string>
     <string name="pay_with_credit_card">pay with credit card</string>
+    <string name="select_payment_method">select payment method</string>
 </resources>
