--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,6 @@
     <string name="how_much_amount_do_you_want_to_transfer">how much amount do you want to transfer?</string>
     <string name="pay_with_credit_card">pay with credit card</string>
     <string name="select_payment_method">select payment method</string>
+    <string name="update_profile">"Edit Profile"</string>
+    <string name="save_profile">"Save Profile"</string>
 </resources>
