--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">Cashix</string>
     <string name="loginskip">Skip Login</string>
-    <string name="send_otp_button_text">SEND OTP</string>
+    <string name="send_otp_button_text">Send OTP</string>
     <string name="login_mobile_hint">00000 00000</string>
     <string name="accept_privacy_policy">accept privacy policy</string>
     <string name="let_s_begin_enter_your_number">Get Started with \nCashix</string>
     <string name="a_single_step_to_go">Enter the OTP we\'ve sent to</string>
     <string name="force_exit">Force Exit</string>
-    <string name="continue_here">CONTINUE</string>
+    <string name="continue_here">Continue</string>
     <string name="account_succesfully_created">Account Created Successfully</string>
     <string name="kyc_response">Later</string>
     <string name="kyc_response_complete_kyc">Complete Kyc</string>
